Adding Mocha adapter and tests.

--- a/test/jasmine-1/jasmine.html
+++ b/test/jasmine-1/jasmine.html
@@ -11,7 +11,7 @@
 <script type="text/javascript">
   window.Testee = window.top.Testee.Jasmine1;
 </script>
-<script type="text/javascript" src="../../dist/testee.js"></script>
+<script type="text/javascript" src="../../dist/testee.dev.js"></script>
 <script type="text/javascript" src="test.js"></script>
 
 <script type="text/javascript">
