--- a/test/qunit/qunit.html
+++ b/test/qunit/qunit.html
@@ -17,7 +17,7 @@
     window.Testee = window.top.Testee.QUnit;
   </script>
 
-  <script type="text/javascript" src="../../dist/testee.js"></script>
+  <script type="text/javascript" src="../../dist/testee.dev.js"></script>
   <script type="text/javascript" src="test.js"></script>
 </body>
 </html>
