--- a/test/jasmine/jasmine.html
+++ b/test/jasmine/jasmine.html
@@ -13,7 +13,7 @@
 <script type="text/javascript">
   window.Testee = window.top.Testee.Jasmine;
 </script>
-<script type="text/javascript" src="../../dist/testee.js"></script>
+<script type="text/javascript" src="../../dist/testee.dev.js"></script>
 <script type="text/javascript" src="test.js"></script>
 
 <body>
