Adding code coverage support.

--- a/test/mocha/mocha.html
+++ b/test/mocha/mocha.html
@@ -29,6 +29,7 @@
       return window.io[name];
     }
 
+    window.__coverage__ = { test: 'Mocha coverage' };
     window.Testee = window.top.Testee.Mocha;
   </script>
 
