--- a/test/qunit/qunit.html
+++ b/test/qunit/qunit.html
@@ -15,6 +15,7 @@
   <script type="text/javascript" src="../../bower_components/qunit/qunit/qunit.js"></script>
   <script type="text/javascript">
     window.Testee = window.top.Testee.QUnit;
+    window.__coverage__ = { test: 'Qunit coverage' };
   </script>
 
   <script type="text/javascript" src="../../dist/testee.dev.js"></script>
