Adding Jasmine 2.x adapter

--- a/test/index.html
+++ b/test/index.html
@@ -32,6 +32,7 @@
 <script type="text/javascript" src="commons.js"></script>
 <script type="text/javascript" src="qunit.test.js"></script>
 <script type="text/javascript" src="jasmine-1.test.js"></script>
+<script type="text/javascript" src="jasmine.test.js"></script>
 <script type="text/javascript" src="mocha.test.js"></script>
 
 </body>
