--- a/test/jasmine/jasmine.html
+++ b/test/jasmine/jasmine.html
@@ -5,16 +5,15 @@
   <title>Jasmine 2 Spec Runner</title>
   <link rel="stylesheet" type="text/css" href="../../bower_components/jasmine/lib/jasmine-core/jasmine.css">
 </head>
-
 <script type="text/javascript" src="../../bower_components/jasmine/lib/jasmine-core/jasmine.js"></script>
 <script type="text/javascript" src="../../bower_components/jasmine/lib/jasmine-core/jasmine-html.js"></script>
 <script type="text/javascript" src="../../bower_components/jasmine/lib/jasmine-core/boot.js"></script>
-
-<script type="text/javascript">
-  window.Testee = window.top.Testee.Jasmine;
-</script>
 <script type="text/javascript" src="../../dist/testee.dev.js"></script>
 <script type="text/javascript" src="test.js"></script>
+<script type="text/javascript">
+  	window.Testee = window.top.Testee.Jasmine;
+    window.__coverage__ = { test: 'Jasmine coverage' };
+</script>
 
 <body>
 </body>
