--- a/test/index.html
+++ b/test/index.html
@@ -2,7 +2,8 @@
     "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-  <link rel="stylesheet" href="../bower_components/qunit/qunit/qunit.css" type="text/css" media="screen"/>
+  <title>Unit test framework adapter tests</title>
+  <link rel="stylesheet" href="../node_modules/qunitjs/qunit/qunit.css" type="text/css" media="screen"/>
 </head>
 <body>
 <style type="text/css">
@@ -24,16 +25,15 @@
 <ol id="qunit-tests"></ol>
 <div id="qunit-fixture">test markup, will be hidden</div>
 
-<script type="text/javascript" src="../bower_components/qunit/qunit/qunit.js"></script>
+<script type="text/javascript" src="../node_modules/qunitjs/qunit/qunit.js"></script>
 <script>
   window.Testee = {};
 </script>
-<script type="text/javascript" src="../bower_components/eventEmitter/EventEmitter.js"></script>
+<script type="text/javascript" src="../node_modules/wolfy87-eventemitter/EventEmitter.js"></script>
 <script type="text/javascript" src="commons.js"></script>
 <script type="text/javascript" src="qunit.test.js"></script>
 <script type="text/javascript" src="jasmine-1.test.js"></script>
 <script type="text/javascript" src="jasmine.test.js"></script>
 <script type="text/javascript" src="mocha.test.js"></script>
-
 </body>
 </html>
