--- a/test/jasmine/jasmine.html
+++ b/test/jasmine/jasmine.html
@@ -3,18 +3,17 @@
 <html>
 <head>
   <title>Jasmine 2 Spec Runner</title>
-  <link rel="stylesheet" type="text/css" href="../../bower_components/jasmine/lib/jasmine-core/jasmine.css">
+  <link rel="stylesheet" type="text/css" href="../../node_modules/jasmine-core/lib/jasmine-core/jasmine.css">
 </head>
-<script type="text/javascript" src="../../bower_components/jasmine/lib/jasmine-core/jasmine.js"></script>
-<script type="text/javascript" src="../../bower_components/jasmine/lib/jasmine-core/jasmine-html.js"></script>
-<script type="text/javascript" src="../../bower_components/jasmine/lib/jasmine-core/boot.js"></script>
-<script type="text/javascript" src="../../dist/testee.dev.js"></script>
-<script type="text/javascript" src="test.js"></script>
-<script type="text/javascript">
-  	window.Testee = window.top.Testee.Jasmine;
-    window.__coverage__ = { test: 'Jasmine coverage' };
-</script>
-
 <body>
+  <script type="text/javascript" src="../../node_modules/jasmine-core/lib/jasmine-core/jasmine.js"></script>
+  <script type="text/javascript" src="../../node_modules/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
+  <script type="text/javascript" src="../../node_modules/jasmine-core/lib/jasmine-core/boot.js"></script>
+  <script type="text/javascript" src="../../dist/testee.js"></script>
+  <script type="text/javascript" src="test.js"></script>
+  <script type="text/javascript">
+      window.Testee = window.top.Testee.Jasmine;
+      window.__coverage__ = { test: 'Jasmine coverage' };
+  </script>
 </body>
 </html>
