--- a/test/mocha/mocha.html
+++ b/test/mocha/mocha.html
@@ -3,12 +3,13 @@
 <head>
   <title>Mocha</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <link rel="stylesheet" href="../../bower_components/mocha/mocha.css" />
+  <link rel="stylesheet" href="../../node_modules/mocha/mocha.css" />
 </head>
 <body>
   <div id="mocha"></div>
-  <script src="../../bower_components/chai/chai.js" type="text/javascript"></script>
-  <script src="../../bower_components/mocha//mocha.js" type="text/javascript"></script>
+  
+  <script src="../../node_modules/chai/chai.js" type="text/javascript"></script>
+  <script src="../../node_modules/mocha/mocha.js" type="text/javascript"></script>
   <script type="text/javascript">
     mocha.setup('bdd');
 
@@ -22,7 +23,7 @@
     window.Testee = window.top.Testee.Mocha;
   </script>
 
-  <script type="text/javascript" src="../../dist/testee.dev.js"></script>
+  <script type="text/javascript" src="../../dist/testee.js"></script>
   <script type="text/javascript" src="test.js"></script>
 </body>
 </html>
