--- a/test/jasmine-1/jasmine.html
+++ b/test/jasmine-1/jasmine.html
@@ -3,11 +3,12 @@
 <html>
 <head>
   <title>Jasmine 1 Spec Runner</title>
-  <link rel="stylesheet" type="text/css" href="lib/jasmine.css">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jasmine/1.3.1/jasmine.css">
 </head>
 <body>
-  <script type="text/javascript" src="lib/jasmine.js"></script>
-  <script type="text/javascript" src="lib/jasmine-html.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/1.3.1/jasmine.js"></script>
+  <script type="text/javascript" src="
+https://cdnjs.cloudflare.com/ajax/libs/jasmine/1.3.1/jasmine-html.js"></script>
 
   <script type="text/javascript">
     window.Testee = window.top.Testee.Jasmine1;
