--- a/test/index.html
+++ b/test/index.html
@@ -29,7 +29,8 @@
 <script>
   window.Testee = {};
 </script>
-<script type="text/javascript" src="../node_modules/wolfy87-eventemitter/EventEmitter.js"></script>
+<script type="text/javascript" src="../node_modules/core-js/client/core.js"></script>
+<script type="text/javascript" src="../node_modules/feathers-client/dist/feathers.min.js"></script>
 <script type="text/javascript" src="commons.js"></script>
 <script type="text/javascript" src="qunit.test.js"></script>
 <script type="text/javascript" src="jasmine-1.test.js"></script>
