Rewrite tests to be more reusable

--- a/test/jasmine/jasmine.html
+++ b/test/jasmine/jasmine.html
@@ -12,7 +12,7 @@
   <script type="text/javascript" src="../../dist/testee.js"></script>
   <script type="text/javascript" src="test.js"></script>
   <script type="text/javascript">
-      window.Testee = window.top.Testee.Jasmine;
+      window.Testee = window.top.TesteeMock;
       window.__coverage__ = { test: 'Jasmine coverage' };
   </script>
 </body>
