--- a/test/index.html
+++ b/test/index.html
@@ -31,10 +31,13 @@
 </script>
 <script type="text/javascript" src="../node_modules/core-js/client/core.js"></script>
 <script type="text/javascript" src="../node_modules/feathers-client/dist/feathers.min.js"></script>
+<!--
 <script type="text/javascript" src="commons.js"></script>
 <script type="text/javascript" src="qunit.test.js"></script>
 <script type="text/javascript" src="jasmine-1.test.js"></script>
 <script type="text/javascript" src="jasmine.test.js"></script>
 <script type="text/javascript" src="mocha.test.js"></script>
+-->
+<script src='./test.js'></script>
 </body>
 </html>
