--- a/test/jasmine-1/jasmine.html
+++ b/test/jasmine-1/jasmine.html
@@ -7,11 +7,10 @@
 </head>
 <body>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/1.3.1/jasmine.js"></script>
-  <script type="text/javascript" src="
-https://cdnjs.cloudflare.com/ajax/libs/jasmine/1.3.1/jasmine-html.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/1.3.1/jasmine-html.js"></script>
 
   <script type="text/javascript">
-    window.Testee = window.top.Testee.Jasmine1;
+    window.Testee = window.top.TesteeMock;
   </script>
   <script type="text/javascript" src="../../dist/testee.js"></script>
   <script type="text/javascript" src="test.js"></script>
