--- a/test/qunit/qunit.html
+++ b/test/qunit/qunit.html
@@ -11,10 +11,10 @@
   <h2 id="qunit-userAgent"></h2>
   <ol id="qunit-tests"></ol>
   <div id="qunit-fixture">test markup, will be hidden</div>
-  
+
   <script type="text/javascript" src="../../node_modules/qunitjs/qunit/qunit.js"></script>
   <script type="text/javascript">
-    window.Testee = window.top.Testee.QUnit;
+    window.Testee = window.top.TesteeMock;
     window.__coverage__ = { test: 'Qunit coverage' };
   </script>
 
