--- a/test/qunit2/qunit2.html
+++ b/test/qunit2/qunit2.html
@@ -2,7 +2,7 @@
     "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-  <link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-1.23.1.css" type="text/css" media="screen" />
+  <link rel="stylesheet" href="../../node_modules/qunitjs/qunit/qunit.css" type="text/css" media="screen" />
 </head>
 <body>
   <h1 id="qunit-header">QUnit example</h1>
@@ -12,7 +12,7 @@
   <ol id="qunit-tests"></ol>
   <div id="qunit-fixture">test markup, will be hidden</div>
 
-  <script type="text/javascript" src="https://code.jquery.com/qunit/qunit-1.23.1.js"></script>
+  <script type="text/javascript" src="../../node_modules/qunitjs/qunit/qunit.js"></script>
   <script type="text/javascript">
     window.Testee = window.top.TesteeMock;
     window.__coverage__ = { test: 'Qunit coverage' };
