Use steal 2; do not add process shim from steal-tools

--- a/test/qunit/qunit.html
+++ b/test/qunit/qunit.html
@@ -16,6 +16,7 @@
   <script type="text/javascript">
     window.Testee = window.top.TesteeMock;
     window.__coverage__ = { test: 'Qunit coverage' };
+console.log('testee loaded', window.Testee);
   </script>
 
   <script type="text/javascript" src="../../dist/testee.js"></script>
